--- a/package.json
+++ b/package.json
@@ -9,16 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@^5.10.6",
+    "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/styles": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.4",
+    "@reach/dialog": "^0.17.0",
+    "add": "^2.0.6",
+    "date-fns": "^2.29.3",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.0.1",
     "next": "12.3.1",
+    "next-transpile-modules": "^9.0.0",
+    "polished": "^4.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datepicker": "^4.8.0",
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-firebaseui": "^6.0.0",
+    "styled-components": "^5.3.6",
+    "styled-icons": "^10.46.0",
+    "styled-reset": "^4.4.2",
+    "styled-system": "^5.1.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+  },
+  "alias": {
+    "@mui/styled-engine": "@mui/styled-engine-sc"
   }
 }
